--- a/style.css
+++ b/style.css
@@ -131,10 +131,12 @@ main {
     margin: 60px;
     user-select: none;
 }
+
 .title h2 {
     user-select: none;
     transition: 0.4s ease-out;
 }
+
 .title h2:hover {
     transform: translateY(-2px);
     transform: scale(1.1);
@@ -209,6 +211,7 @@ main {
     gap: 50px;
     margin-top: 100px;
 }
+
 #length {
     padding: 20px 50px;
     font-size: 30px;
@@ -220,11 +223,13 @@ main {
     outline: none;
     text-align: center;
 }
+
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
 .choose {
     font-size: 20px;
     margin: 30px 0 0 0;
@@ -295,6 +300,7 @@ footer p {
     padding-bottom: 400px;
     text-align: center;
 }
+
 #images {
     display: flex !important;
     justify-content: space-around;
@@ -314,4 +320,110 @@ footer p {
 
 #socials li:hover {
     color: rgb(2, 148, 2);
+}
+
+@media screen and (max-width: 1024px) {
+    header {
+        flex-wrap: wrap;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .make,
+    .loger {
+        width: 100%;
+        text-align: center;
+    }
+
+    header h1 {
+        font-size: 40px;
+    }
+
+    .title {
+        font-size: 40px;
+        padding: 100px;
+    }
+
+    .secTitle h2 {
+        font-size: 80px;
+    }
+
+    #suggestion,
+    #suggestionSecond {
+        width: 80%;
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        padding: 30px;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .make,
+    .loger {
+        width: 100%;
+    }
+
+    header h1 {
+        font-size: 35px;
+    }
+
+    .loger {
+        justify-content: center;
+    }
+
+    .title {
+        font-size: 30px;
+        padding: 50px;
+    }
+
+    .secTitle h2 {
+        font-size: 60px;
+    }
+
+    #suggestion,
+    #suggestionSecond {
+        width: 90%;
+        font-size: 16px;
+        height: 70px;
+    }
+
+    #generateButton {
+        font-size: 25px;
+        padding: 15px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    header {
+        padding: 20px;
+    }
+
+    header h1 {
+        font-size: 30px;
+    }
+
+    .title {
+        font-size: 25px;
+        padding: 30px;
+    }
+
+    .secTitle h2 {
+        font-size: 50px;
+    }
+
+    #suggestion,
+    #suggestionSecond {
+        width: 100%;
+        font-size: 14px;
+        height: 60px;
+    }
+
+    #generateButton {
+        font-size: 20px;
+        padding: 10px;
+    }
 }
