--- a/style.css
+++ b/style.css
@@ -226,8 +226,8 @@ main {
 
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 .choose {
@@ -257,6 +257,7 @@ footer li {
     gap: 20px;
     text-decoration: none;
     transition: 0.3s;
+
 }
 
 .social {
@@ -293,12 +294,14 @@ footer p {
 
 #thanks {
     color: white;
+    font-size: 40px;
 }
 
 #social {
     display: block;
     padding-bottom: 400px;
     text-align: center;
+    font-size: 25px;
 }
 
 #images {
@@ -337,6 +340,8 @@ footer p {
 
     header h1 {
         font-size: 40px;
+        text-align: center;
+        margin: 30px 0;
     }
 
     .title {
@@ -352,6 +357,34 @@ footer p {
     #suggestionSecond {
         width: 80%;
         font-size: 18px;
+        user-select: all;
+    }
+
+    footer {
+        display: flex;
+        text-align: center;
+        overflow: hidden;
+    }
+
+    #thanks {
+        font-size: 30px;
+        align-items: center;
+        text-align: right;
+        margin: 100px 20px;
+    }
+
+    #social {
+        font-size: 20px;
+        margin: 0;
+        align-items: left;
+        text-align: left;
+        padding-top: 0;
+        margin: -40px -50px;
+    }
+
+    .social {
+        font-size: 30px;
+        text-align: center;
     }
 }
 
@@ -368,7 +401,9 @@ footer p {
     }
 
     header h1 {
-        font-size: 35px;
+        font-size: 30px;
+        text-align: center;
+        margin: 20px 0;
     }
 
     .loger {
@@ -389,11 +424,38 @@ footer p {
         width: 90%;
         font-size: 16px;
         height: 70px;
+        user-select: all;
     }
 
     #generateButton {
         font-size: 25px;
         padding: 15px;
+    }
+
+    footer {
+        display: flex;
+        text-align: center;
+    }
+
+    #social {
+        font-size: 20px;
+        margin: 0;
+        align-items: left;
+        text-align: left;
+        padding-top: 0;
+        margin: -40px -50px;
+    }
+
+    .social {
+        font-size: 35px;
+        text-align: center;
+    }
+
+    #thanks {
+        font-size: 20px;
+        align-items: center;
+        text-align: right;
+        margin: 120px 20px;
     }
 }
 
@@ -403,7 +465,9 @@ footer p {
     }
 
     header h1 {
-        font-size: 30px;
+        font-size: 25px;
+        text-align: center;
+        margin: 20px 0;
     }
 
     .title {
@@ -419,11 +483,46 @@ footer p {
     #suggestionSecond {
         width: 100%;
         font-size: 14px;
-        height: 60px;
+        height: 80px;
+        text-align: center;
+        align-items: center;
+        user-select: all;
+    }
+
+    #sug {
+        display: block;
+        justify-content: space-around;
+        margin: 50px;
+
     }
 
     #generateButton {
         font-size: 20px;
         padding: 10px;
+    }
+
+    footer {
+        display: flex;
+    }
+
+    #thanks {
+        font-size: 15px;
+        align-items: center;
+        text-align: right;
+        margin: 150px 10px;
+    }
+
+    #social {
+        font-size: 20px;
+        margin: 0;
+        align-items: left;
+        text-align: left;
+        padding-top: 0;
+        margin: -40px -50px;
+    }
+
+    .social {
+        font-size: 25px;
+        text-align: center;
     }
 }
